--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ astunparse==1.6.3
 attrs==22.2.0
 backcall==0.2.0
 beautifulsoup4==4.11.2
-black==23.1.0
+# black
 bleach==6.0.0
 cachetools==5.3.0
 ccimport==0.4.2
@@ -37,7 +37,7 @@ gast==0.3.3
 google-auth==2.16.2
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.51.3
+# grpcio<=1.51.3
 h5py==2.10.0
 idna==3.4
 imageio==2.26.0
@@ -75,30 +75,30 @@ matplotlib==3.5.2
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mistune==2.0.5
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
+# mkl-fft>=1.3.1
+# mkl-random>=1.2.2
+# mkl-service>=2.4.0
 mmcls==0.25.0
-mmcv-full==1.3.13
-mmdet==2.14.0
--e git+ssh://git@github.com/Abyssaledge/FSDV2.git@fcb9b7c0c6e4d501bae31f196c6e269376383251#egg=mmdet3d
-mmsegmentation==0.30.0
+# mmcv-full==1.3.13
+# mmdet==2.14.0
+# -e git+ssh://git@github.com/Abyssaledge/FSDV2.git@fcb9b7c0c6e4d501bae31f196c6e269376383251#egg=mmdet3d
+# mmsegmentation==0.30.0
 mypy-extensions==1.0.0
 nbclassic==0.5.3
 nbclient==0.7.2
 nbconvert==7.2.10
 nbformat==5.7.3
--e git+https://github.com/tencent/ncnn@03550ba532314870464456924891a510eb32e38c#egg=ncnn&subdirectory=python
+# -e git+https://github.com/tencent/ncnn@03550ba532314870464456924891a510eb32e38c#egg=ncnn&subdirectory=python
 nest-asyncio==1.5.6
 networkx==2.2
 ninja==1.11.1
 notebook==6.5.3
 notebook_shim==0.2.2
 numba==0.48.0
-numpy==1.19.5
+numpy
 nuscenes-devkit==1.1.10
 oauthlib==3.2.2
-olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
+# olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
 onnxruntime==1.8.1
 opencv-python==4.7.0.72
 opt-einsum==3.3.0
@@ -127,7 +127,7 @@ pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybind11==2.10.4
-pycocotools==2.0.6
+# pycocotools==2.0.6
 pycodestyle==2.10.0
 pycparser==2.21
 pyflakes==3.0.1
@@ -151,7 +151,7 @@ rfc3986-validator==0.1.1
 rsa==4.9
 scikit-image==0.19.3
 scikit-learn==1.2.2
-scipy==1.10.1
+# scipy==1.10.1
 Send2Trash==1.8.0
 Shapely==1.8.5
 six==1.15.0
@@ -160,11 +160,11 @@ soupsieve==2.4
 spconv-cu114==2.3.3
 stack-data==0.6.2
 tenacity==8.2.2
-tensorboard==2.11.2
+# tensorboard>=2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.4.0
-tensorflow-estimator==2.4.0
+# tensorflow>=2.4.0
+# tensorflow-estimator>=2.4.0
 termcolor==1.1.0
 terminado==0.17.1
 terminaltables==3.1.10
@@ -172,19 +172,19 @@ threadpoolctl==3.1.0
 tifffile==2023.3.15
 tinycss2==1.2.1
 tomli==2.0.1
-torch==1.8.0
-torch-scatter @ file:///usr/share/miniconda/envs/test/conda-bld/pytorch-scatter_1631018401613/work
-torchaudio==0.8.0a0+a751e1d
--e git+ssh://git@github.com/Abyssaledge/TorchEx.git@32eabf726169c2c4437428425a6d27400f8efc3a#egg=torchex
-torchvision==0.9.0
+# torch==1.8.0
+# torch-scatter @ file:///usr/share/miniconda/envs/test/conda-bld/pytorch-scatter_1631018401613/work
+# torchaudio==0.8.0a0+a751e1d
+# -e git+ssh://git@github.com/Abyssaledge/TorchEx.git@32eabf726169c2c4437428425a6d27400f8efc3a#egg=torchex
+# torchvision==0.9.0
 tornado==6.2
 tqdm==4.65.0
 traitlets==5.9.0
 trimesh==2.35.39
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1678559861143/work
+# typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1678559861143/work
 uri-template==1.2.0
 urllib3==1.26.15
-waymo-open-dataset-tf-2-4-0==1.4.1
+# waymo-open-dataset-tf-2-4-0==1.4.1
 wcwidth==0.2.6
 webcolors==1.12
 webencodings==0.5.1
